--- a/contact.html
+++ b/contact.html
@@ -26,20 +26,6 @@
     <p>We'd love to hear from you! Whether you have a question about our products, need assistance, or just want to chat, feel free to reach out.</p>
 
     <!-- Contact Information -->
-    <div class="contact-info">
-        <div class="info-item">
-            <i class="fas fa-envelope"></i>
-            <p>crecorner028@gmail.com</p>
-        </div>
-        <!-- <div class="info-item">
-            <i class="fas fa-phone-alt"></i>
-            <p>Phone: +91 8279837388</p>
-        </div> -->
-        <div class="info-item">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>ANR City Haridwar(Uttrakhand)</p>
-        </div>
-    </div>
 
     <!-- Contact Form -->
     <div class="contact-form">
@@ -65,9 +51,9 @@
     <div class="social-media">
         <h2>Connect with Us</h2>
         <div class="social-icons">
-            <a href="https://www.instagram.com/cre_corner?igsh=YWM0Z25icDdoNTJp" title="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="" title="Instagram"><i class="fab fa-instagram"></i></a>
                     <!-- <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a> -->
-                    <a href="https://youtube.com/@crecorner954?si=t0IcCSGCnpQsadNS" title="Youtube"><i class="fab fa-youtube"></i></a>
+                    <a href="" title="Youtube"><i class="fab fa-youtube"></i></a>
                     <!-- <a href="#" title="Pinterest"><i class="fab fa-pinterest"></i></a> -->
         </div>
     </div>
