--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@
             <!-- Contact Information -->
             <div class="footer-contact">
                 <h4>Contact Us</h4>
-                <p>Email: crecorner@gmail.com</p>
-                <!-- <p>Phone: +91 8279837388</p> -->
-                <p>Address: ANR City ,Haridwar(Uttrakhand)
+               <!-- writing email,phone no. and address -->
                 </p>
             </div>
     
@@ -169,10 +167,10 @@
             <div class="footer-social">
                 <h4>Follow Us</h4>
                 <div class="social-icons">
-                    <a href="https://www.instagram.com/cre_corner?igsh=YWM0Z25icDdoNTJp" title="Instagram"><i class="fab fa-instagram"></i></a>
-                    <!-- <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a> -->
-                    <a href="https://youtube.com/@crecorner954?si=t0IcCSGCnpQsadNS" title="Youtube"><i class="fab fa-youtube"></i></a>
-                    <!-- <a href="#" title="Pinterest"><i class="fab fa-pinterest"></i></a> -->
+                    <!-- <a href="" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a> -->
+                    <!-- <a href="S" title="Youtube"><i class="fab fa-youtube"></i></a>
+                    <a href="#" title="Pinterest"><i class="fab fa-pinterest"></i></a> --> 
                 </div>
             </div>
         </div>
