--- a/products/p12.html
+++ b/products/p12.html
@@ -16,10 +16,7 @@
 <!-- Firebase Firestore SDK -->
 <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js"></script>
 <script>
-    
-    firebase.initializeApp(firebaseConfig);
-    const db= firebase.firestore();
-    const auth=firebase.auth();
+    //   firebase config
     </script>
 </head>
 <body>
