--- a/products/p7.html
+++ b/products/p7.html
@@ -17,9 +17,7 @@
 <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js"></script>
 <script>
   
-    firebase.initializeApp(firebaseConfig);
-    const db= firebase.firestore();
-    const auth=firebase.auth();
+   //   firebase config
     </script>
 </head>
 <body>
